[package]
name = "duel"
version = "0.1.0"
description = "duel.fun — Solana escrow and payout contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "duel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-security-txt = "1.1.2"
